[gd_scene load_steps=3 format=3 uid="uid://0oxf0y6h5x7c"]

[ext_resource type="Script" uid="uid://w527xjtguirq" path="res://scripts/inspection_panel.gd" id="1_1xkvd"]
[ext_resource type="Texture2D" uid="uid://dbises401duxh" path="res://assets/id_card_placeholder.png" id="2_h8uis"]

[node name="InspectionPanel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1xkvd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dialogue View"
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
tooltip_text = "Exit"
text = "X"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StudentIDSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StudentIDSection"]
layout_mode = 2
text = "STUDENT"
horizontal_alignment = 1

[node name="IDPlaceholder" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/StudentIDSection"]
custom_minimum_size = Vector2(320, 200)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_h8uis")
expand_mode = 1
stretch_mode = 5

[node name="MainContent" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_constants/separation = 20

[node name="NPCIcon" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/LeftSection"]
layout_mode = 2

[node name="CharacterIcon" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/LeftSection/NPCIcon"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/LeftSection/NPCIcon"]
layout_mode = 2
text = "NPC headshot image (for now, just use a black box"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MiddleSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="DialogueSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/MiddleSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="DialogPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/MiddleSection/DialogueSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/MiddleSection/DialogueSection/DialogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MainContent/MiddleSection/DialogueSection/DialogPanel/MarginContainer"]
layout_mode = 2
text = "dialogue (for now just put some empty dialogue/speech boxes)"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsSection" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ApproveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsSection"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
focus_mode = 0
text = "ACCEPT"

[node name="RejectButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsSection"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
focus_mode = 0
text = "REJECT"
